feat(insistime-web): update logo

--- a/packages/insistime/packages/insistime-web/src/components/index/index-ui/index.scss
+++ b/packages/insistime/packages/insistime-web/src/components/index/index-ui/index.scss
@@ -1,17 +1,15 @@
 .logo {
     float: left;
     width: 120px;
-    height: 31px;
-    margin: 16px 24px 16px 0;
+    height: 63px;
+    margin: 0 24px 0 0;
     background: #fff;
-    border-radius: 2px;
 
     img {
         display: block;
-        width: 31px;
-        height: 31px;
-        float: right;
-        border-radius: 2px;
+        width: 63px;
+        height: 63px;
+        margin: 0 auto;
     }
 }
 
