feat(insistime-web): add github

--- a/packages/insistime/packages/insistime-web/src/components/index/index-ui/index.scss
+++ b/packages/insistime/packages/insistime-web/src/components/index/index-ui/index.scss
@@ -70,6 +70,19 @@ html, body{
         .nav{
             float: right;
             width: 100px;
+            
+            a:link { 
+                color: #333; text-decoration:none; 
+            }
+            a:visited { 
+                color: #333; text-decoration:none; 
+            } 
+            a:hover { 
+                color: #333; text-decoration:none; 
+            }
+            a:active { 
+                color: #333; text-decoration:none; 
+            }
         }
     }
 }
