--- a/packages/insistime/packages/insistime-web/src/components/index/index-ui/index-header/index-header.scss
+++ b/packages/insistime/packages/insistime-web/src/components/index/index-ui/index-header/index-header.scss
@@ -1,42 +1,42 @@
-@use '../index';
+@use "../base";
 
 $headerHeight: 60px;
 $logoWidth: 200px;
-$navsWidth: index.$containerWidth - $logoWidth;
+$navsWidth: base.$containerWidth - $logoWidth;
 
-.nav-txt{
-    height: $headerHeight;
-    color: #333;
-    font-size: 16px;
-    text-align: center;
-    line-height: $headerHeight;
-    user-select: none;
-    cursor: pointer;
+.nav-txt {
+  height: $headerHeight;
+  color: #333;
+  font-size: 16px;
+  text-align: center;
+  line-height: $headerHeight;
+  user-select: none;
+  cursor: pointer;
 }
-.nav-txt:hover{
-    font-size: 18px;
+.nav-txt:hover {
+  font-size: 18px;
 }
 
-.header{
-    width: index.$all;
+.header {
+  width: base.$all;
+  height: $headerHeight;
+  border-bottom: base.$borderBottom;
+
+  .logo {
+    float: left;
+    width: $logoWidth;
+  }
+
+  .navs {
+    float: left;
+    width: $navsWidth;
     height: $headerHeight;
-    border-bottom: index.$borderBottom;
 
-    .logo{
-        float: left;
-        width: $logoWidth;
+    .nav {
+      float: right;
+      width: 100px;
+
+      @include base.alink($color: #333);
     }
-
-    .navs{
-        float: left;
-        width: $navsWidth;
-        height: $headerHeight;
-
-        .nav{
-            float: right;
-            width: 100px;
-            
-            @include index.alink($color: #333);
-        }
-    }
+  }
 }
