--- a/packages/insistime/packages/insistime-web/src/components/index/index-ui/index-info/index-info.scss
+++ b/packages/insistime/packages/insistime-web/src/components/index/index-ui/index-info/index-info.scss
@@ -1,44 +1,44 @@
-@use '../index';
+@use "../base";
 
 $infoHeight: 400px;
 
-.info{
-    width: index.$containerWidth;
-    height: $infoHeight;
-    border-bottom: index.$borderBottom;
+.info {
+  width: base.$containerWidth;
+  height: $infoHeight;
+  border-bottom: base.$borderBottom;
 
-    .row{
-        width: index.$containerWidth;
-    }
-    .row.top{
-        padding-top: 40px;
-        height: calc($infoHeight / 2) - 40px;
-    }
-    .row.bottom{
-        padding-bottom: 40px;
-        height: calc($infoHeight / 2) - 40px;
-    }
-    
-    .col{
-        float: left;
-        width: calc(index.$containerWidth / 3);
-        height: calc($infoHeight / 2) - 40px;
+  .row {
+    width: base.$containerWidth;
+  }
+  .row.top {
+    padding-top: 40px;
+    height: calc($infoHeight / 2) - 40px;
+  }
+  .row.bottom {
+    padding-bottom: 40px;
+    height: calc($infoHeight / 2) - 40px;
+  }
 
-        .main{
-            width: index.$all;
-            height: 80px;
-            color: #333;
-            font-size: 18px;
-            text-align: center;
-            line-height: 80px;
-        }
-        .other{
-            width: index.$all;
-            height: 20px;
-            color: #333;
-            font-size: 14px;
-            text-align: center;
-            line-height: 20px;
-        }
+  .col {
+    float: left;
+    width: calc(base.$containerWidth / 3);
+    height: calc($infoHeight / 2) - 40px;
+
+    .main {
+      width: base.$all;
+      height: 80px;
+      color: #333;
+      font-size: 18px;
+      text-align: center;
+      line-height: 80px;
     }
+    .other {
+      width: base.$all;
+      height: 20px;
+      color: #333;
+      font-size: 14px;
+      text-align: center;
+      line-height: 20px;
+    }
+  }
 }
