--- a/packages/insistime/packages/insistime-web/src/components/mobile/index-ui/index-content/index-content.scss
+++ b/packages/insistime/packages/insistime-web/src/components/mobile/index-ui/index-content/index-content.scss
@@ -1,16 +1,16 @@
-@use "../index";
+@use "../base";
 
 $contentHeight: 6rem;
 $txtMainHeight: 4rem;
 $txtOtherHeight: 2rem;
 
 .content {
-  width: index.$all;
+  width: base.$all;
   height: $contentHeight;
-  border-bottom: index.$borderBottom;
+  border-bottom: base.$borderBottom;
 
   .txt-main {
-    width: index.$all;
+    width: base.$all;
     height: $txtMainHeight;
     margin-bottom: -1rem;
     color: #333;
@@ -19,7 +19,7 @@ $txtOtherHeight: 2rem;
     line-height: $txtMainHeight;
   }
   .txt-other {
-    width: index.$all;
+    width: base.$all;
     height: $txtOtherHeight;
     color: #333;
     font-size: 14px;
