--- a/packages/insistime/packages/insistime-web/src/components/mobile/index-ui/index-footer/index-footer.scss
+++ b/packages/insistime/packages/insistime-web/src/components/mobile/index-ui/index-footer/index-footer.scss
@@ -1,14 +1,14 @@
-@use "../index";
+@use "../base";
 
 $footerHeight: 2rem;
 
 .footer {
-  width: index.$all;
+  width: base.$all;
   height: $footerHeight;
   color: #333;
   font-size: 14px;
   text-align: center;
   line-height: $footerHeight;
 
-  @include index.alink($color: #333);
+  @include base.alink($color: #333);
 }
