feat(insistime-web): cdn domain

--- a/packages/insistime-server/views/index-mobile.html
+++ b/packages/insistime-server/views/index-mobile.html
@@ -21,4 +21,4 @@
         );
 
         window.qresize.func();
-      })(window, document);</script><link href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/static/index-mobile.css" rel="stylesheet"></head><body><div id="root"></div><script defer="defer" src="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/static/react.bundle.js"></script><script defer="defer" src="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/static/index-mobile.bundle.js"></script></body></html>
+      })(window, document);</script><link href="https://static.insistime.com/00_insistime/static/index-mobile.css" rel="stylesheet"></head><body><div id="root"></div><script defer="defer" src="https://static.insistime.com/00_insistime/static/react.bundle.js"></script><script defer="defer" src="https://static.insistime.com/00_insistime/static/index-mobile.bundle.js"></script></body></html>
