fix(insistime-web): debug

--- a/packages/insistime-server/views/index-mobile.html
+++ b/packages/insistime-server/views/index-mobile.html
@@ -1,4 +1,62 @@
-<!doctype html><html><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/><meta name="renderer" content="webkit"/><meta http-equiv="Cache-Control" content="no-siteapp"/><meta name="keywords" content="insistime.com"/><meta name="description" content="insistime.com"/><meta name="author" contect="uikoo9"/><meta name="robots" contect="all"/><link href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/favicon.ico" type="image/x-icon" rel="bookmark"/><link href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/favicon.ico" type="image/x-icon" rel="icon"/><link href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/favicon.ico" type="image/x-icon" rel="shortcut icon"/><meta name="mobile-web-app-capable" content="yes"/><link rel="icon" sizes="144x144" href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/logo_144_144.png"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><meta name="apple-mobile-web-app-title" content="insistime.com"/><link rel="apple-touch-icon-precomposed" href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/logo_144_144.png"/><title>insistime.com</title><script>(function (window, document) {
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- important meta -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+
+    <!-- 360 and baidu -->
+    <meta name="renderer" content="webkit" />
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+
+    <!-- for search-->
+    <meta name="keywords" content="insistime.com" />
+    <meta name="description" content="insistime.com" />
+    <meta name="author" contect="uikoo9" />
+    <meta name="robots" contect="all" />
+
+    <!-- favicon.ico -->
+    <link
+      href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/favicon.ico"
+      type="image/x-icon"
+      rel="bookmark"
+    />
+    <link
+      href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/favicon.ico"
+      type="image/x-icon"
+      rel="icon"
+    />
+    <link
+      href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/favicon.ico"
+      type="image/x-icon"
+      rel="shortcut icon"
+    />
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link
+      rel="icon"
+      sizes="144x144"
+      href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/logo_144_144.png"
+    />
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="insistime.com" />
+    <link
+      rel="apple-touch-icon-precomposed"
+      href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/logo_144_144.png"
+    />
+
+    <title>insistime.com</title>
+
+    <script type="text/javascript">
+      (function (window, document) {
         window.qresize = {};
         window.qresize.event =
           "orientationchange" in window ? "orientationchange" : "resize";
@@ -21,4 +79,11 @@
         );
 
         window.qresize.func();
-      })(window, document);</script><link href="https://static.insistime.com/00_insistime/static/index-mobile.css" rel="stylesheet"></head><body><div id="root"></div><script defer="defer" src="https://static.insistime.com/00_insistime/static/react.bundle.js"></script><script defer="defer" src="https://static.insistime.com/00_insistime/static/index-mobile.bundle.js"></script></body></html>
+      })(window, document);
+    </script>
+  <link href="https://static.insistime.com/00_insistime/static/index-mobile.css" rel="stylesheet"></head>
+
+  <body>
+    <div id="root"></div>
+  <script defer src="https://static.insistime.com/00_insistime/static/react.bundle.js"></script><script defer src="https://static.insistime.com/00_insistime/static/index-mobile.bundle.js"></script></body>
+</html>
