--- a/packages/insistime-server/views/index-pc.html
+++ b/packages/insistime-server/views/index-pc.html
@@ -1,62 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!-- important meta -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
-    />
 
-    <!-- 360 and baidu -->
-    <meta name="renderer" content="webkit" />
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
+<head>
+  <!-- important meta -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-    <!-- for search-->
-    <meta name="keywords" content="insistime.com" />
-    <meta name="description" content="insistime.com" />
-    <meta name="author" contect="uikoo9" />
-    <meta name="robots" contect="all" />
+  <!-- 360 and baidu -->
+  <meta name="renderer" content="webkit" />
+  <meta http-equiv="Cache-Control" content="no-siteapp" />
 
-    <!-- favicon.ico -->
-    <link
-      href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/favicon.ico"
-      type="image/x-icon"
-      rel="bookmark"
-    />
-    <link
-      href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/favicon.ico"
-      type="image/x-icon"
-      rel="icon"
-    />
-    <link
-      href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/favicon.ico"
-      type="image/x-icon"
-      rel="shortcut icon"
-    />
+  <!-- for search-->
+  <meta name="keywords" content="insistime.com" />
+  <meta name="description" content="insistime.com" />
+  <meta name="author" contect="uikoo9" />
+  <meta name="robots" contect="all" />
 
-    <!-- Add to homescreen for Chrome on Android -->
-    <meta name="mobile-web-app-capable" content="yes" />
-    <link
-      rel="icon"
-      sizes="144x144"
-      href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/logo_144_144.png"
-    />
+  <!-- favicon.ico -->
+  <link href="https://static.insistime.com/00_insistime/favicon.ico" type="image/x-icon" rel="bookmark" />
+  <link href="https://static.insistime.com/00_insistime/favicon.ico" type="image/x-icon" rel="icon" />
+  <link href="https://static.insistime.com/00_insistime/favicon.ico" type="image/x-icon" rel="shortcut icon" />
 
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="insistime.com" />
-    <link
-      rel="apple-touch-icon-precomposed"
-      href="https://insistime-1252774635.cos.ap-beijing.myqcloud.com/00_insistime/logo_144_144.png"
-    />
+  <!-- Add to homescreen for Chrome on Android -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <link rel="icon" sizes="144x144" href="https://static.insistime.com/00_insistime/logo_144_144.png" />
 
-    <title>insistime.com</title>
-  <link href="https://static.insistime.com/00_insistime/static/index-pc.css" rel="stylesheet"></head>
+  <!-- Add to homescreen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-title" content="insistime.com" />
+  <link rel="apple-touch-icon-precomposed" href="https://static.insistime.com/00_insistime/logo_144_144.png" />
 
-  <body>
-    <div id="root"></div>
-  <script defer src="https://static.insistime.com/00_insistime/static/react.bundle.js"></script><script defer src="https://static.insistime.com/00_insistime/static/index-pc.bundle.js"></script></body>
+  <title>insistime.com</title>
+  <link href="https://static.insistime.com/00_insistime/static/index-pc.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script defer src="https://static.insistime.com/00_insistime/static/react.bundle.js"></script>
+  <script defer src="https://static.insistime.com/00_insistime/static/index-pc.bundle.js"></script>
+</body>
+
 </html>
