fix(insistime-web): debug

--- a/packages/insistime-server/views/index-mobile.html
+++ b/packages/insistime-server/views/index-mobile.html
@@ -60,13 +60,10 @@
       window.qresize.func();
     })(window, document);
   </script>
-  <link href="https://static.insistime.com/00_insistime/static/index-mobile.css" rel="stylesheet">
-</head>
+<link href="https://static.insistime.com/00_insistime/static/index-mobile.918d550f.css" rel="stylesheet"></head>
 
 <body>
   <div id="root"></div>
-  <script defer src="https://static.insistime.com/00_insistime/static/react.bundle.js"></script>
-  <script defer src="https://static.insistime.com/00_insistime/static/index-mobile.bundle.js"></script>
-</body>
+<script defer src="https://static.insistime.com/00_insistime/static/react.45b74bb3.js"></script><script defer src="https://static.insistime.com/00_insistime/static/index-mobile.3e45bbe0.js"></script></body>
 
 </html>
