--- a/packages/insistime-server/views/index-pc.html
+++ b/packages/insistime-server/views/index-pc.html
@@ -33,13 +33,10 @@
   <link rel="apple-touch-icon-precomposed" href="https://static.insistime.com/00_insistime/logo_144_144.png" />
 
   <title>insistime.com</title>
-  <link href="https://static.insistime.com/00_insistime/static/index-pc.css" rel="stylesheet">
-</head>
+<link href="https://static.insistime.com/00_insistime/static/index-pc.f72100da.css" rel="stylesheet"></head>
 
 <body>
   <div id="root"></div>
-  <script defer src="https://static.insistime.com/00_insistime/static/react.bundle.js"></script>
-  <script defer src="https://static.insistime.com/00_insistime/static/index-pc.bundle.js"></script>
-</body>
+<script defer src="https://static.insistime.com/00_insistime/static/react.45b74bb3.js"></script><script defer src="https://static.insistime.com/00_insistime/static/index-pc.2df8a712.js"></script></body>
 
 </html>
