--- a/packages/insistime-server/views/login-pc.html
+++ b/packages/insistime-server/views/login-pc.html
@@ -33,14 +33,10 @@
   <link rel="apple-touch-icon-precomposed" href="https://static.insistime.com/00_insistime/logo_144_144.png" />
 
   <title>insistime.com</title>
-  <link href="https://static.insistime.com/00_insistime/static/login-pc.css" rel="stylesheet">
-</head>
+<link href="https://static.insistime.com/00_insistime/static/login-pc.a8381f28.css" rel="stylesheet"></head>
 
 <body>
   <div id="root"></div>
-  <script defer src="https://static.insistime.com/00_insistime/static/react.bundle.js"></script>
-  <script defer src="https://static.insistime.com/00_insistime/static/axios.bundle.js"></script>
-  <script defer src="https://static.insistime.com/00_insistime/static/login-pc.bundle.js"></script>
-</body>
+<script defer src="https://static.insistime.com/00_insistime/static/react.45b74bb3.js"></script><script defer src="https://static.insistime.com/00_insistime/static/axios.e763ad92.js"></script><script defer src="https://static.insistime.com/00_insistime/static/login-pc.6dd97337.js"></script></body>
 
 </html>
