--- a/packages/qiao-ui/src/components/base.scss
+++ b/packages/qiao-ui/src/components/base.scss
@@ -1,6 +1,4 @@
-// @import 'bulma/css/bulma.css';
-
-// @import "bootstrap/dist/css/bootstrap.css";
+@import "bootstrap/dist/css/bootstrap.css";
 
 $all: 100%;
 
