--- a/packages/insistime-web/src/components/manage/manage.scss
+++ b/packages/insistime-web/src/components/manage/manage.scss
@@ -3,13 +3,44 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
+  height: 100%;
 }
 
 #root {
   width: 100%;
+  height: 100%;
 }
 
 .container {
   width: 1400px;
+  height: 100%;
   margin: 0 auto;
+}
+
+.menus{
+    width: 200px;
+    height: 100%;
+
+    .menu{
+        width: 200px;
+        height: 40px;
+        border-bottom: dotted 1px #333;
+        
+        color: #333;
+        font-size: 14px;
+        line-height: 50px;
+        text-align: center;
+        
+        cursor: pointer;
+        user-select: none;
+    }
+    .menu:hover{
+        font-size: 16px;
+    }
+    .menu.main{
+        height: 50px;
+        border-bottom: solid 1px #333;
+        font-size: 16px;
+    }
+    
 }
