--- a/packages/qiao-ui/src/base.scss
+++ b/packages/qiao-ui/src/base.scss
@@ -4,21 +4,40 @@ $border: solid 1px #333;
 $borderBottom: solid 1px #333;
 $borderBottomDotted: dotted 1px #333;
 
+$borderSolid: solid 1px #333;
+$borderDotted: dotted 1px #333;
+
+// width
+@mixin width() {
+    width: 100%;
+}
+
+// font
+@mixin font($size: 14px, $align: left, $color: #333) {
+    color: $color;
+    font-size: $size;
+    text-align: $align;
+}
+
+// alink
 @mixin alink($color: #333) {
-  a:link {
-    color: $color;
-    text-decoration: none;
-  }
-  a:visited {
-    color: $color;
-    text-decoration: none;
-  }
-  a:hover {
-    color: $color;
-    text-decoration: none;
-  }
-  a:active {
-    color: $color;
-    text-decoration: none;
-  }
+    a:link {
+        color: $color;
+        text-decoration: none;
+    }
+
+    a:visited {
+        color: $color;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: $color;
+        text-decoration: none;
+    }
+
+    a:active {
+        color: $color;
+        text-decoration: none;
+    }
 }
