--- a/packages/qiao-ui/src/mobile/info-list/info-list.scss
+++ b/packages/qiao-ui/src/mobile/info-list/info-list.scss
@@ -2,33 +2,37 @@
 
 $containerWidth: 16rem;
 
-$infoHeight: 36rem;
+$infoHeight: 6rem;
+$titleHeight: 2rem;
+$titlePaddingTop: 1rem;
+$descHeight: 3rem;
 
 .infos {
-  width: $containerWidth;
-  height: $infoHeight;
-  border-bottom: base.$borderBottom;
-
-  .info {
     width: $containerWidth;
-    height: calc($infoHeight / 6);
 
-    .title {
-      width: $containerWidth;
-      height: 2rem;
-      padding-top: 1rem;
-      color: #333;
-      font-size: 18px;
-      text-align: center;
-      line-height: 3rem;
+    .info {
+        @include base.width();
+
+        height: $infoHeight;
+        border-bottom: base.$borderDotted;
+
+        .title {
+            @include base.width();
+
+            height: $titleHeight;
+            line-height: $titleHeight;
+            padding-top: $titlePaddingTop;
+
+            @include base.font($size: 18px, $align: center);
+        }
+
+        .desc {
+            @include base.width();
+
+            height: $descHeight;
+            line-height: $descHeight;
+
+            @include base.font($size: 14px, $align: center);
+        }
     }
-    .desc {
-      width: $containerWidth;
-      height: 3rem;
-      color: #333;
-      font-size: 14px;
-      text-align: center;
-      line-height: 3rem;
-    }
-  }
 }
