--- a/packages/qiao-ui/src/base.scss
+++ b/packages/qiao-ui/src/base.scss
@@ -13,6 +13,11 @@ $borderDotted: dotted 1px #333;
     width: 100%;
 }
 
+// margin auto
+@mixin marginAuto() {
+    margin: 0 auto;
+}
+
 // font
 @mixin font($size: 14px, $align: left, $color: #333) {
     color: $color;
